<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_addStyles"
        android:orderInCategory="2"
        android:title="@string/addStyle"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_viewAllStyles"
        android:title="@string/allStyles"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_viewAllRequests"
        android:title="@string/request"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
