<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.artisans.qwikhomeservices.activities.auth.login.LoginActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:clipToPadding="false"
            android:dividerPadding="@dimen/eightDp"
            android:textColorHint="@color/purple"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/twentyFourDp"
            app:boxCornerRadiusBottomStart="@dimen/twentyFourDp"
            app:boxCornerRadiusTopEnd="@dimen/twentyFourDp"
            app:boxCornerRadiusTopStart="@dimen/twentyFourDp"
            app:boxStrokeColor="#7B1FA2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleTint="#7B1FA2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:drawableStart="@drawable/ic_email_ash"
                android:drawableLeft="@drawable/ic_email_ash"
                android:drawablePadding="@dimen/eightDp"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/eightDp"
                android:paddingEnd="@dimen/eightDp"
                android:singleLine="true"
                android:textColor="@color/purple"
                tools:targetApi="o" />

            <requestFocus />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/purple"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/twentyFourDp"
            app:boxCornerRadiusBottomStart="@dimen/twentyFourDp"
            app:boxCornerRadiusTopEnd="@dimen/twentyFourDp"
            app:boxCornerRadiusTopStart="@dimen/twentyFourDp"
            app:boxStrokeColor="#7B1FA2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/eightDp"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/eightDp"
                android:paddingEnd="@dimen/eightDp"
                android:singleLine="true"
                android:textColor="@color/purple" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLoginUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eightyDp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/eightyDp"
            android:background="@drawable/curvebotton"
            android:onClick="gotoMainPage"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordLayout" />

        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:onClick="forgotPassword"
            android:text="@string/forgot_password"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dont_have_an_account_yet"
            app:layout_constraintBottom_toTopOf="@+id/txtForgotPass"
            app:layout_constraintEnd_toEndOf="@+id/btnLoginUser"
            app:layout_constraintStart_toStartOf="@+id/txtPasswordLayout"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginUser"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="casual"
            android:onClick="gotoSignUp"
            android:text="@string/sign_up"
            android:textColor="@color/purple"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/txtPasswordLayout"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>